PV-397 Fix aspect ratio stretching in Visual Editor

--- a/plan_visual_django/static/plan_visual_django/css/main-new-25.css
+++ b/plan_visual_django/static/plan_visual_django/css/main-new-25.css
@@ -12166,9 +12166,13 @@ div#swimlane_data tr.default-swimlane td {
 
 #visual-content {
   position: relative;
+  padding-bottom: 10px;
 }
 #visual-content .canvas-wrapper {
   position: relative;
+  height: 400px;
+  overflow: scroll;
+  margin-bottom: 10px;
   width: 100%;
 }
 #visual-content .canvas-wrapper .canvas-layer {
